fix font sizing on smaller phones for BLM component

--- a/styles/components/BLM.scss
+++ b/styles/components/BLM.scss
@@ -7,7 +7,7 @@
   justify-content: center;
   align-items: center;
 
-  font-size: 0.90em;
+  font-size: 0.75em;
   font-weight: 600;
   letter-spacing: 0.5px;
   white-space: pre;
